updated swagger files and added post method to search for pokemon
