# internal/api/handlers/collection/get_pokemon_details_in_collection.go
@@ -68,20 +68,22 @@ func getCollectionPokemonDetailHandler(s *api.Server) echo.HandlerFunc {
 
 		pokemonIDStr := strfmt.UUID4(pokemon.PokemonID)
 		response := &types.CollectionPokemonDetail{
-			PokemonID:      &pokemonIDStr,
-			Number:         swag.Int64(int64(pokemon.PokemonNumber)),
-			NameOrNickname: nameOrNickname,
-			Type1:          &pokemon.Type1,
-			Type2:          pokemon.Type2.String,
-			Hp:             swag.Int64(int64(pokemon.HP)),
-			Attack:         swag.Int64(int64(pokemon.Attack)),
-			Defense:        swag.Int64(int64(pokemon.Defense)),
-			Speed:          swag.Int64(int64(pokemon.Speed)),
-			Special:        swag.Int64(int64(pokemon.Special)),
-			Png:            &pokemon.PNGURL,
-			Gif:            &pokemon.GifURL,
-			Description:    &pokemon.Description,
-			Caught:         &caughtDate,
+			CollectionPokemon: types.CollectionPokemon{
+				PokemonID:      &pokemonIDStr,
+				Number:         swag.Int64(int64(pokemon.PokemonNumber)),
+				NameOrNickname: nameOrNickname,
+				Type1:          &pokemon.Type1,
+				Type2:          pokemon.Type2.String,
+				Hp:             swag.Int64(int64(pokemon.HP)),
+				Attack:         swag.Int64(int64(pokemon.Attack)),
+				Defense:        swag.Int64(int64(pokemon.Defense)),
+				Speed:          swag.Int64(int64(pokemon.Speed)),
+				Special:        swag.Int64(int64(pokemon.Special)),
+				ImageURL:       &pokemon.PNGURL,
+				Description:    &pokemon.Description,
+			},
+			GifURL: pokemon.GifURL,
+			Caught: &caughtDate,
 		}
 
 		return util.ValidateAndReturn(c, http.StatusOK, response)
