# internal/types/pokemon/search_pokemon_mixin3_parameters.go
@@ -1,0 +1,87 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package pokemon
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+
+	"github.com/ansiegl/Pok-Nest.git/internal/types"
+)
+
+// NewSearchPokemonMixin3Params creates a new SearchPokemonMixin3Params object
+// no default values defined in spec.
+func NewSearchPokemonMixin3Params() SearchPokemonMixin3Params {
+
+	return SearchPokemonMixin3Params{}
+}
+
+// SearchPokemonMixin3Params contains all the bound params for the search pokemon mixin3 operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters searchPokemonMixin3
+type SearchPokemonMixin3Params struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*
+	  In: body
+	*/
+	Body *types.PokemonSearchRequest
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewSearchPokemonMixin3Params() beforehand.
+func (o *SearchPokemonMixin3Params) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body types.PokemonSearchRequest
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			res = append(res, errors.NewParseError("body", "body", "", err))
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Body = &body
+			}
+		}
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *SearchPokemonMixin3Params) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// body
+	// Required: false
+
+	// body is validated in endpoint
+	//if err := o.Body.Validate(formats); err != nil {
+	//  res = append(res, err)
+	//}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
